<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="error">Cancer classifier failed to initialize</string>
    <string name="history">Histori</string>
    <string name="image">Image</string>
    <string name="no_history">Tidak ada histori saat ini</string>
    <string name="save_to_history">save to history</string>
    <string name="delete">Delete</string>
    <string name="news">news</string>
</resources>